# data-validator-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/dfguard/: cli.py  core.py  engine.py  profiler.py  renderers.py  report.py  version.py
src/dfguard/rules/: base.py  numeric.py  quality.py  structural.py
src/dfguard/rules/spark/: performance.py  quality.py  structural.py
src/dfguard/spark/: engine.py  validate_spark.py
src/validator/: __init__.py  cli.py  core.py  engine.py  profiler.py  renderers.py  rules.py
src/validator/rules/: base.py  numeric.py  quality.py  structural.py
tests/: test_api.py  test_cli.py  test_edge_cases.py  test_parity.py  test_profiler.py  test_rules.py
